objects/ccrz__E_LocaleFormatter__c.object
<CustomObject>
    <description>A utility custom object that should not have any records. This is used by visualforce pages to render locale-formatted data at run time.</description>
    <fields>
        <fullName>ccrz__Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__DateField__c</fullName>
        <label>Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__DateTimeField__c</fullName>
        <label>DateTime Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccrz__Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Percent__c</fullName>
        <description>Field to display data in percentage format</description>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccrz__RichText__c</fullName>
        <label>RichText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>CC Locale Formatter</label>
    <nameField>
        <label>Locale Formatter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Locale Formatters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>